NavBar Username, Login alignment fixed. thanks reed

--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -38,6 +38,7 @@ img {
 
 /*  both logoRereddit link AND username and login  */
 .logoReReddit_usernameAndLogin {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -48,4 +49,15 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  margin-right: 20px;
+
+}
+
+.usernameAndLogin h4 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-right: 20px;
+  margin-top: 38px;
+  margin-bottom: 0px;
 }
